--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Profie</title>
+    <title>My Profile</title>
     <link
       href="fonts.googleapis.com/css?family=Inter:100,200,300,400,500,600,700,800,900"
       ;
@@ -59,7 +59,7 @@
     <section class="flex flex-col py-16 px-[120px] justify-center items-center">
         <h2 class="text-5xl font-bold">My Latest Work</h2>
         <div>
-
+            <p>So this is My Latest Work</p>
         </div>
     </section>
  </body>
