--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <body>
     <nav>
-      <h1>Dio</h1>
+      <h1>Dio Brando</h1>
       <ul>
         <li>About Me</li>
         <li>Works</li>
@@ -31,7 +31,7 @@
       <div class="containerTextHero">
         <!--text-->
         <h2>👋 Hi mate, I am</h2>
-        <h2 class="title">Dio Brando</h2>
+        <h2 class="title">Dio</h2>
         <p>Hi, I made this website thru simetri cihuyy</p>
       </div>
     </div>
@@ -59,7 +59,7 @@
     <section class="flex flex-col py-16 px-[120px] justify-center items-center">
         <h2 class="text-5xl font-bold">My Latest Work</h2>
         <div>
-            <p>So this is My Latest Work</p>
+          
         </div>
     </section>
  </body>
