--- a/index.html
+++ b/index.html
@@ -1,66 +1,255 @@
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Profile</title>
+    <link rel="stylesheet" href="styles.css" />
     <link
       href="fonts.googleapis.com/css?family=Inter:100,200,300,400,500,600,700,800,900"
       ;
       rel="stylesheet"
       type="text/html"
     />
-    <link rel="stylesheet" href="styles.css" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   </head>
-
   <body>
-    <nav>
-      <h1>Dio Brando</h1>
-      <ul>
+    <nav class="justify-center md:justify-between">
+      <h1>Choirul Anam</h1>
+      <ul class="hidden md:flex">
         <li>About Me</li>
         <li>Works</li>
-        <li>Contact</li>
+        <li>Contacts</li>
       </ul>
     </nav>
-
-    <div class="containerHero">
+    <div class="containerHero" data-aos="fade-up">
       <div class="containerImage">
-        <!--gambar-->
-        <img src="./assets/Image.jpeg" />
+        <!-- gambar -->
+        <img src="/assets/image.jpg" />
       </div>
       <div class="containerTextHero">
-        <!--text-->
+        <!-- text -->
         <h2>👋 Hi mate, I am</h2>
-        <h2 class="title">Dio</h2>
-        <p>Hi, I made this website thru simetri cihuyy</p>
+        <h2 class="title">Choirul Anam</h2>
+        <p class="subtitle">Hi, i made this website for My Portfolio</p>
       </div>
     </div>
 
-    <!-- about us -->
-    <div class="flex py-16 px-[133px] flex-row gap-24">
-        <img src="./assets/Image.jpeg" class="w-96 h-96" />
-        <div class="flex flex-col">
-            <h2 class="text-5xl font-bold mb-6" >About me</h2>
-            <div class="flex flex-col gap-4">
-                <p class="text-base text-[#4B5563]" style="text-align: justify;">Dio is a tall man with long golden hair and an extremely 
-                    muscular build most probably owing to his extensive training during his youth. Following his vampiric transformation he 
-                    has been described as attractive by some characters, such as Straizo and much later Enrico Pucci.</p>
-               <p class="text-base text-[#4B5563]" style="text-align: justify;">Following DIO's takeover of Jonathan's body, he dons a jacket
-                     with a tight black tank top underneath, as well as chaps with an exposed crotch. His face is now in full-view, and on his head is a 
-                     heart-shaped circlet to match his knee guards. He also wears pointed shoes known as crackows. This is his form during the 
-                     beginning of the DIO's World story arc. In most depictions of DIO, his outfit is tinted orange or yellow.</p>
-               <p class="text-base text-[#4B5563]" style="text-align: justify;">He also wears a necklace covering his neck scar and heart motifs above his feet and on his 
-                    pant legs, but he quickly stopped sporting them after his first stairway confrontation with Polnareff.</p>
-            </div>
+    <!-- about us  -->
+    <div
+      data-aos="fade-up"
+      class="flex px-8 py-16 lg:px-[133px] flex-col lg:flex-row gap-24 justify-center items-center"
+    >
+      <img src="/assets/image.jpg" class="w-full h-auto lg:w-96 lg:h-96" />
+      <div class="flex flex-col">
+        <h2 class="text-5xl font-bold mb-6">About Me</h2>
+        <div class="flex flex-col gap-4 justify-center items-center">
+          <p class="text-base text-[#4B5563]">
+            A graduate of SMK Computer and Network Engineering (TKJ) who has skills in hardware installation, 
+            network troubleshooting, computer system maintenance, and web development. He is known as a detailed person, 
+            a fast learner, and able to work together in teams and independently to complete technical tasks.
+          </p>
+          <p class="text-base text-[#4B5563]">
+            A Computer Engineering graduate with a specialization in Web Development and Databases combines technical 
+            expertise in front-end and back-end web development with the skills to design, implement, and manage robust
+             database systems. They play a vital role in creating scalable, user-friendly, and data-driven web solutions.
+          </p>
         </div>
+      </div>
     </div>
-    
-    <!-- My Latest Work -->
-    <section class="flex flex-col py-16 px-[120px] justify-center items-center">
-        <h2 class="text-5xl font-bold">My Latest Work</h2>
-        <div>
-          
+
+    <section
+      data-aos="fade-up"
+      data-aos-delay="1000"
+      data-aos-duration="1000"
+      class="flex flex-col pt-16 px-6 lg:px-16 lg:px-[133px] justify-center items-center"
+    >
+      <h2 class="text-3xl font-bold mb-4 md:mb-12 md:text-5xl">
+        My Latest Work
+      </h2>
+      <div
+        class="w-full px-4 md:px-10 flex flex-col gap-y-4 md:gap-y-8 justify-between items-center"
+      >
+        <div
+          class="flex flex-col gap-y-4 md:flex-row md:gap-x-8 md:gap-8 lg:gap-16"
+        >
+          <div
+            class="flex flex-col w-full gap-y-2 md:w-1/3"
+            data-aos="fade-right"
+            data-aos-delay="200"
+            data-aos-duration="800"
+          >
+            <img src="./assets/Image (3).png" />
+            <p class="font-bold text-gray-700 md:text-[24px]">Free Bird</p>
+            <p class="md:text-[20px]">Cihuy</p>
+          </div>
+          <div
+            class="flex flex-col w-full gap-y-2 md:w-1/3"
+            data-aos="fade-down"
+            data-aos-delay="500"
+            data-aos-duration="800"
+          >
+            <img src="./assets/Image (1).png" />
+            <p class="font-bold text-gray-700 md:text-[24px]">Purple Haze</p>
+            <p class="md:text-[20px]">Jimmy Hendrix</p>
+          </div>
+          <div
+            class="flex flex-col w-full gap-y-2 md:w-1/3"
+            data-aos="fade-left"
+            data-aos-delay="700"
+            data-aos-duration="800"
+          >
+            <img src="./assets/Image (2).png" />
+            <p class="font-bold text-gray-700 md:text-[24px]">You Really Got</p>
+            <p class="md:text-[20px]">The Kinks</p>
+          </div>
         </div>
+        <div
+          class="flex flex-col gap-y-4 md:gap-x-8 md:flex-row md:gap-8 lg:gap-16"
+        >
+          <div
+            class="flex flex-col w-full gap-y-2 md:w-1/3"
+            data-aos="fade-right"
+          >
+            <img src="./assets/Image (1).png" />
+            <p class="font-bold text-gray-700 md:text-[24px]">Free Bird</p>
+            <p class="md:text-[20px]">Cihuy</p>
+          </div>
+          <div
+            class="flex flex-col w-full gap-y-2 md:w-1/3"
+            data-aos="fade-down"
+          >
+            <img src="./assets/Image (2).png" />
+            <p class="font-bold text-gray-700 md:text-[24px]">Purple Haze</p>
+            <p class="md:text-[20px]">Jimmy Hendrix</p>
+          </div>
+          <div
+            class="flex flex-col w-full gap-y-2 md:w-1/3"
+            data-aos="fade-left"
+          >
+            <img src="./assets/Image (1).png" />
+            <p class="font-bold text-gray-700 md:text-[24px]">You Really Got</p>
+            <p class="md:text-[20px]">The Kinks</p>
+          </div>
+        </div>
+      </div>
     </section>
- </body>
+
+    <section
+      data-aos="fade-up"
+      class="w-full pt-16 px-6 lg:px-[133px] lg:px-16 flex flex-col md:flex-row md:justify-between md:items-start"
+    >
+      <div class="md:w-1/2">
+        <h2 class="text-3xl font-bold mb-4 lg:mb-12 md:text-5xl">
+          Contact Me!
+        </h2>
+        <p class="">
+          Do you have great idea and want to share. Let’s make something amazing
+          together?
+        </p>
+      </div>
+      <div class="py-4 md:py-0 md:w-1/2">
+        <form class="flex flex-col gap-4">
+          <div class="flex flex-col">
+            <label for="fname">Your Name:</label>
+            <input
+              placeholder="For Example"
+              class="border border-gray-400 p-2 rounded-md"
+              type="text"
+              id="fname"
+              name="fname"
+            />
+          </div>
+          <div class="flex flex-col">
+            <label for="email">Email:</label>
+            <input
+              placeholder="forexample@gmail.com"
+              class="border border-gray-400 p-2 rounded-md"
+              type="email"
+              id="email"
+              name="email"
+            />
+          </div>
+          <div class="flex flex-col">
+            <label for="help">What Can I Help?:</label>
+            <input
+              placeholder="I need your help to build my web..."
+              class="border border-gray-400 p-2 rounded-md"
+              type="text"
+              id="help"
+              name="help"
+            />
+          </div>
+
+          <button
+            type="submit"
+            class="bg-blue-700 rounded-md text-white py-2 md:w-[200px] md:self-end"
+          >
+            Submit
+          </button>
+        </form>
+      </div>
+    </section>
+
+    <section
+      data-aos="fade-up"
+      class="w-full flex flex-col py-16 px-4 text-center gap-y-4 md:max-w-[360px] md:mx-auto"
+    >
+      <h2 class="text-3xl font-bold md:text-5xl">Thank You</h2>
+      <p class="text-balance md:max-w-[400px] md:mx-auto">
+        Do you have great idea and want to share. Let’s make something amazing
+        together
+      </p>
+      <div class="flex flex-col md:flex-row gap-2 mx-auto w-full">
+        <button class="bg-blue-700 px-4 w-full md:w-1/2 py-2 rounded-xl">
+            <a href="https://www.instagram.com/choirulllanammm/" target="_blank">
+            <div class="flex flex-row gap-x-2 justify-center items-center">
+              <img src="./assets/ic-instagram.png" class="w-[16px] h-[16px]" />
+              <p class="text-white">Instagram</p>
+            </div>
+          </a>
+          </button>
+        <button class="bg-blue-700 px-4 w-full md:w-1/2 py-2 rounded-xl">
+          <div class="flex flex-row gap-x-2 justify-center items-center">
+            <img src="./assets/ic-mail.png" class="w-[18px] h-[16px]" />
+            <p class="text-white">Email</p>
+          </div>
+        </button>
+      </div>
+    </section>
+
+    <footer class="bg-blue-800 px-4 py-12 md:py-32 md:px-16 lg:px-[133px]">
+      <div class="flex flex-col">
+        <div
+          class="flex flex-col md:flex-row md:justify-between md:items-center"
+        >
+          <h2 class="text-white text-2xl font-bold">Choirul Anam</h2>
+          <div
+            class="text-white flex flex-col md:flex-row md:justify-around gap-4 mt-4 md:mt-0"
+          >
+            <p>About Me</p>
+            <p>Works</p>
+            <p>Contacts</p>
+          </div>
+        </div>
+        <div class="w-full bg-white rounded-md h-[1px] my-4"></div>
+        <div
+          class="flex flex-col md:flex-row md:justify-between md:items-center"
+        >
+          <div class="flex flex-row gap-4">
+            <img src="./assets/ic-instagram.png" class="w-[16px] h-[16px]" />
+            <img src="./assets/ic-mail.png" class="w-[18px] h-[16px]" />
+          </div>
+          <p class="text-white text-xs mt-4 md:mt-0">
+            Copyright Choirul Anam. 2024
+          </p>
+        </div>
+      </div>
+    </footer>
+  </body>
+  <script>
+    AOS.init();
+  </script>
 </html>
