--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="containerHero" data-aos="fade-up">
       <div class="containerImage">
         <!-- gambar -->
-        <img src="/assets/image.jpg" />
+        <img src="/assets/imagee.jpg" />
       </div>
       <div class="containerTextHero">
         <!-- text -->
@@ -42,7 +42,7 @@
       data-aos="fade-up"
       class="flex px-8 py-16 lg:px-[133px] flex-col lg:flex-row gap-24 justify-center items-center"
     >
-      <img src="/assets/image.jpg" class="w-full h-auto lg:w-96 lg:h-96" />
+      <img src="/assets/imagee.jpg" class="w-full h-auto lg:w-96 lg:h-96" />
       <div class="flex flex-col">
         <h2 class="text-5xl font-bold mb-6">About Me</h2>
         <div class="flex flex-col gap-4 justify-center items-center">
