--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="containerHero" data-aos="fade-up">
       <div class="containerImage">
         <!-- gambar -->
-        <img src="/assets/imagee.jpg" />
+        <img src="/assets/profile.jpg" />
       </div>
       <div class="containerTextHero">
         <!-- text -->
@@ -43,19 +43,15 @@
       data-aos="fade-up"
       class="flex px-8 py-16 lg:px-[133px] flex-col lg:flex-row gap-24 justify-center items-center"
       >
-      <img src="/assets/imagee.jpg" class="w-full h-auto lg:w-96 lg:h-96" />
+      <img src="/assets/profile.jpg" class="w-full h-auto lg:w-96 lg:h-96" />
       <div class="flex flex-col">
         <h2 class="text-5xl font-bold mb-6">About Me</h2>
         <div class="flex flex-col gap-4 justify-center items-center">
-          <p class="text-base text-[#4B5563]">
-            A graduate of SMK Computer and Network Engineering (TKJ) who has skills in hardware installation, 
-            network troubleshooting, computer system maintenance, and web development. He is known as a detailed person, 
-            a fast learner, and able to work together in teams and independently to complete technical tasks.
-          </p>
-          <p class="text-base text-[#4B5563]">
-            A Computer Engineering graduate with a specialization in Web Development and Databases combines technical 
-            expertise in front-end and back-end web development with the skills to design, implement, and manage robust
-            database systems. They play a vital role in creating scalable, user-friendly, and data-driven web solutions.
+          <p class="text-base text-[#4B5563]" style="text-align: justify;">
+            I am an active vocational high school student majoring in Computer and Network Engineering (TKJ), 
+            with skills in local network administration. I have a strong interest in enhancing my expertise in
+             the IT field, especially in computer networks, programming, and emerging technologies. I am committed 
+             to continuous learning and contributing to innovative technological solutions.
           </p>
         </div>
       </div>
@@ -75,65 +71,26 @@
         class="w-full px-4 md:px-10 flex flex-col gap-y-4 md:gap-y-8 justify-between items-center"
       >
         <div
-          class="flex flex-col gap-y-4 md:flex-row md:gap-x-8 md:gap-8 lg:gap-16"
-        >
-          <div
-            class="flex flex-col w-full gap-y-2 md:w-1/3"
-            data-aos="fade-right"
-            data-aos-delay="200"
-            data-aos-duration="800"
+            class="w-full flex flex-col gap-y-4 justify-center items-center"
           >
-            <img src="./assets/Image (3).png" />
-            <p class="font-bold text-gray-700 md:text-[24px]">Free Bird</p>
-            <p class="md:text-[20px]">Cihuy</p>
-          </div>
-          <div
-            class="flex flex-col w-full gap-y-2 md:w-1/3"
-            data-aos="fade-down"
-            data-aos-delay="500"
-            data-aos-duration="800"
-          >
-            <img src="./assets/Image (1).png" />
-            <p class="font-bold text-gray-700 md:text-[24px]">Purple Haze</p>
-            <p class="md:text-[20px]">Jimmy Hendrix</p>
-          </div>
-          <div
-            class="flex flex-col w-full gap-y-2 md:w-1/3"
-            data-aos="fade-left"
-            data-aos-delay="700"
-            data-aos-duration="800"
-          >
-            <img src="./assets/Image (2).png" />
-            <p class="font-bold text-gray-700 md:text-[24px]">You Really Got</p>
-            <p class="md:text-[20px]">The Kinks</p>
-          </div>
-        </div>
-        <div
-          class="flex flex-col gap-y-4 md:gap-x-8 md:flex-row md:gap-8 lg:gap-16"
-        >
-          <div
-            class="flex flex-col w-full gap-y-2 md:w-1/3"
-            data-aos="fade-right"
-          >
-            <img src="./assets/Image (1).png" />
-            <p class="font-bold text-gray-700 md:text-[24px]">Free Bird</p>
-            <p class="md:text-[20px]">Cihuy</p>
-          </div>
-          <div
-            class="flex flex-col w-full gap-y-2 md:w-1/3"
-            data-aos="fade-down"
-          >
-            <img src="./assets/Image (2).png" />
-            <p class="font-bold text-gray-700 md:text-[24px]">Purple Haze</p>
-            <p class="md:text-[20px]">Jimmy Hendrix</p>
-          </div>
-          <div
-            class="flex flex-col w-full gap-y-2 md:w-1/3"
-            data-aos="fade-left"
-          >
-            <img src="./assets/Image (1).png" />
-            <p class="font-bold text-gray-700 md:text-[24px]">You Really Got</p>
-            <p class="md:text-[20px]">The Kinks</p>
+            <div
+              class="flex flex-col w-full gap-y-2 md:w-1/2 items-center"
+              data-aos="fade-right"
+              data-aos-delay="200"
+              data-aos-duration="800"
+            >
+              <img src="./assets/latestworkk.png" class="max-w-full md:max-w-[80%]" />
+              <p class="font-bold text-gray-700 text-center md:text-[24px]">
+                <a
+                  href="https://revou-fundamental-course.github.io/25-nov-24-choirulkujo1/"
+                  target="_blank"
+                >
+                Kalkulator BMI Sederhana
+              </p>
+              <p class="text-center md:text-[20px]">
+                Mini Project, tugas dari RevoU.
+              </p>
+            </div>
           </div>
         </div>
       </div>
@@ -214,6 +171,7 @@
           </a>
           </button>
         <button class="bg-blue-700 px-4 w-full md:w-1/2 py-2 rounded-xl">
+          <a href="https://mail.google.com/mail/u/0/?view=cm&tf=1&fs=1&to=mhchoirul.anam@gmail.com" target="_blank">
           <div class="flex flex-row gap-x-2 justify-center items-center">
             <img src="./assets/ic-mail.png" class="w-[18px] h-[16px]" />
             <p class="text-white">Email</p>
@@ -231,9 +189,9 @@
           <div
             class="text-white flex flex-col md:flex-row md:justify-around gap-4 mt-4 md:mt-0"
           >
-            <p>About Me</p>
-            <p>Works</p>
-            <p>Contacts</p>
+            <p><a href="#about-me">About Me</a></p>
+            <p><a href="#latest-work">Works</a></p>
+            <p><a href="#contact">Contacts</a></p>
           </div>
         </div>
         <div class="w-full bg-white rounded-md h-[1px] my-4"></div>
